feat: complete Forge 1.20.1 backport with added mod integrations, updated Gradle environment, and legacy API compatibility fixes.